add student profile, student list, and my form pages with navigation links

--- a/05-thymeleaf-example/src/main/resources/templates/movies.html
+++ b/05-thymeleaf-example/src/main/resources/templates/movies.html
@@ -29,6 +29,15 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/grades}">Grades</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/student-profile}">Student Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/students}">Student List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/my-form}">My Form</a>
+                </li>
             </ul>
         </div>
     </div>
