--- a/05-thymeleaf-example/src/main/resources/templates/my-form.html
+++ b/05-thymeleaf-example/src/main/resources/templates/my-form.html
@@ -9,13 +9,14 @@
           integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
     <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <title>Home</title>
+    <title>Movies</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Thymeleaf</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -42,70 +43,23 @@
         </div>
     </div>
 </nav>
-
 <div class="container">
-    <h1>Hello from Home</h1>
-
-    <p>Current time: 2025-10-20T12:58:56.567</p>
-    <p th:text="'Current time on server: ' + ${date}">
-        <!--th:text po e rendereon tekstin mrena tagjeve <p>-->
-    </p>
-
-    <h3>th:if</h3>
-    <p th:if="${isStudent}">Is Student</p>
-    <p th:text="${isStudent} ? 'Student' : 'Not Student'"></p>
-
-    <h3>th:each</h3>
-    <h5>Colors:</h5>
-    <ul>
-        <li th:each="color : ${colors}" th:text="${color}"></li>
-    </ul>
-
-    <h5>Products table</h5>
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>Name</th>
-            <th>Price</th>
-        </tr>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.key}"></td>
-            <td th:text="${product.value}"></td>
-        </tr>
-    </table>
-
-    <h5>User info</h5>
     <div class="card">
+        <div class="card-header">
+            <h3>My Form</h3>
+        </div>
         <div class="card-body">
-            <p>Emri Mbiemri: <span th:text="${user.getName()}"></span></p>
-            <p>Mosha: <span th:text="${user.getAge()}"></span></p>
-            <p>Email: <span th:text="${user.getEmail()}"></span></p>
+            <form th:action="@{/process-form}" method="get">
+                <label class="form-label">Emri</label>
+                <input type="text"
+                       class="form-control"
+                       placeholder="Shkruaj emrin..."
+                       name="myName"
+                       required/>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
     </div>
-
-    <h5>Users List</h5>
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Email</th>
-        </tr>
-        <tr th:each="u : ${users}">
-            <td th:text="${u.name}"></td>
-            <td th:text="${u.age}"></td>
-            <td th:text="${u.email}"></td>
-        </tr>
-    </table>
-
-
-
-
-
-
-
-
-
-
-
 </div>
 </body>
 </html>
