--- a/05-thymeleaf-example/src/main/resources/templates/my-form.html
+++ b/05-thymeleaf-example/src/main/resources/templates/my-form.html
@@ -12,37 +12,43 @@
     <title>Movies</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Thymeleaf</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/movies}">Movies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/grades}">Grades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/student-profile}">Student Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/students}">Student List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/my-form}">My Form</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<!--<nav class="navbar navbar-expand-lg bg-body-tertiary">-->
+<!--    <div class="container-fluid">-->
+<!--        <a class="navbar-brand" href="#">Thymeleaf</a>-->
+<!--        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"-->
+<!--                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+<!--        <div class="collapse navbar-collapse" id="navbarNav">-->
+<!--            <ul class="navbar-nav">-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/}">Home</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/movies}">Movies</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/grades}">Grades</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/student-profile}">Student Profile</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/students}">Student List</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/my-form}">My Form</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/user-form}">User Form</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</nav>-->
+
+<div th:replace="layout/nav"></div>
+
 <div class="container">
     <div class="card">
         <div class="card-header">
@@ -55,7 +61,25 @@
                        class="form-control"
                        placeholder="Shkruaj emrin..."
                        name="myName"
-                       required/>
+                       required
+                />
+
+                <label class="form-label">Mbiemri</label>
+                <input type="text"
+                       class="form-control"
+                       placeholder="Shkruaj mbiemrin..."
+                       name="mySurname"
+                       required
+                />
+
+                <label class="form-labe">Mosha</label>
+                <input type="number"
+                       class="form-control"
+                       placeholder="Shkruaj moshen..."
+                       name="myAge"
+                       required
+                />
+
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
