--- a/05-thymeleaf-example/src/main/resources/templates/students.html
+++ b/05-thymeleaf-example/src/main/resources/templates/students.html
@@ -12,37 +12,7 @@
     <title>Movies</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Thymeleaf</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/movies}">Movies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/grades}">Grades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/student-profile}">Student Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/students}">Student List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/my-form}">My Form</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="layout/nav"></div>
 
 <div class="container">
     <h2>Lista e studenteve</h2>
