--- a/05-thymeleaf-example/src/main/resources/templates/layout/nav.html
+++ b/05-thymeleaf-example/src/main/resources/templates/layout/nav.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/user-form}">User Form</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/student-form}">Student Form</a>
+                </li>
             </ul>
         </div>
     </div>
