refactor HTML structure to use shared layout fragments and improve code organization

--- a/05-thymeleaf-example/src/main/resources/templates/submitted-user.html
+++ b/05-thymeleaf-example/src/main/resources/templates/submitted-user.html
@@ -1,20 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <title>User</title>
-</head>
-<body>
-<div th:replace="layout/nav"></div>
+<html th:replace="~{shared/layout::layoutFragment('Submitted user', ~{::main}, null, null)}">
 
-<div class="container">
+<main class="container">
     <h2>Te dhenat e juaja jane derguar me sukses</h2>
     <p>Emri dhe mbiemri: <span th:text="${user.name}"></span></p>
     <p>Mosha: <span th:text="${user.age}"></span></p>
@@ -24,7 +10,6 @@
     <p th:if="${user.country == 'mk'}">Shteti: Maqedoni</p>
     <p>Gjuha e preferuar: <span th:text="${user.favoriteLanguage}"></span></p>
     <p>Hobit e zgjedhur: <span th:text="${user.hobbies}"></span></p>
-</div>
+</main>
 
-</body>
 </html>
