--- a/05-thymeleaf-example/src/main/resources/templates/movies.html
+++ b/05-thymeleaf-example/src/main/resources/templates/movies.html
@@ -1,26 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <title>Movies</title>
-</head>
-<body>
-<div th:replace="layout/nav"></div>
+<html th:replace="~{shared/layout::layoutFragment('Movies', ~{::main}, null, null)}">
 
-<div class="container">
+<main class="container">
     <h2>Movie List</h2>
     <ul class="list-group">
         <li class="list-group-item"
             th:each="movie : ${movies}"
             th:text="${movie}"></li>
     </ul>
-</div>
-</body>
+</main>
+
 </html>
