--- a/05-thymeleaf-example/src/main/resources/templates/submitted-form.html
+++ b/05-thymeleaf-example/src/main/resources/templates/submitted-form.html
@@ -1,26 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <title>Movies</title>
-</head>
-<body>
-<div th:replace="layout/nav"></div>
+<html th:replace="~{shared/layout::layoutFragment('Submitted form', ~{::main}, null, null)}">
 
-<div class="container">
+<main class="container">
     <h2>Te dhenat e juaja jane derguar me sukses</h2>
     <p>Emri: <span th:text="${emriIm}"></span></p>
     <p>Mbiemri: <span th:text="${mbiemriIm}"></span></p>
     <p>Mosha: <span th:text="${moshaIme}"></span></p>
-</div>
+</main>
 
-
-</body>
 </html>
