--- a/05-thymeleaf-example/src/main/resources/templates/user-form.html
+++ b/05-thymeleaf-example/src/main/resources/templates/user-form.html
@@ -1,20 +1,24 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <title>User form</title>
-</head>
-<body>
-<div th:replace="layout/nav"></div>
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport"-->
+<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">-->
+<!--    &lt;!&ndash;    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">&ndash;&gt;-->
+<!--    <link rel="stylesheet" th:href="@{/css/styles.css}">-->
+<!--    <title>User form</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div th:replace="shared/nav"></div>-->
+<html th:replace="~{shared/layout::layoutFragment('User Form', ~{::main}, ~{::link}, ~{::script})}">
 
-<div class="container">
+<!-- tagu link qe dergohet si parameter te layout fragmenti -->
+<link rel="stylesheet" th:href="@{/css/user.css}">
+
+<main class="container">
     <div class="card">
         <div class="card-header">
             <h3>User Form</h3>
@@ -122,6 +126,9 @@
             </form>
         </div>
     </div>
-</div>
-</body>
+</main>
+
+<!-- tagu script qe dergohet si parameter te layout fragmenti -->
+<script th:src="@{/js/user.js}"></script>
+
 </html>
