--- a/05-thymeleaf-example/src/main/resources/templates/shared/nav.html
+++ b/05-thymeleaf-example/src/main/resources/templates/shared/nav.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/student-form}">Student Form</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/products}">Products</a>
+                </li>
             </ul>
         </div>
     </div>
