add product create functionality with validation and controller advice

--- a/05-thymeleaf-example/src/main/resources/templates/product/index.html
+++ b/05-thymeleaf-example/src/main/resources/templates/product/index.html
@@ -11,7 +11,8 @@
         <div class="col-md-3 mb-5" th:each="product : ${products}">
             <th:block th:insert="
                 ~{shared/_product::productFragment(
-                ${product.title}, ${product.description}, ${product.image}, ${product.price} + '€'
+                ${product.title}, ${product.description}, ${product.image}, ${product.price} + '€',
+                '/products/update/' + ${product.id}
                 )}">
             </th:block>
         </div>
