--- a/05-thymeleaf-example/src/main/resources/templates/shared/_product.html
+++ b/05-thymeleaf-example/src/main/resources/templates/shared/_product.html
@@ -1,9 +1,10 @@
-<div class="card" style="width: 18rem;" th:fragment="productFragment(title, description, image, price)">
+<div class="card" style="width: 18rem;"
+     th:fragment="productFragment(title, description, image, price, updateLink)">
     <img th:src="${image}" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title" th:text="${title}"></h5>
         <p class="fw-bold">Cmimi: <span th:text="${price}"></span></p>
         <p class="card-text" th:text="${description}"></p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a th:href="@{${updateLink}}" class="btn btn-outline-secondary">Modifiko</a>
     </div>
 </div>
