--- a/06-lombok-jpa/src/main/resources/templates/shared/nav.html
+++ b/06-lombok-jpa/src/main/resources/templates/shared/nav.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/products}">Produktet</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/categories}">Kategorite</a>
+                </li>
             </ul>
         </div>
     </div>
