--- a/06-lombok-jpa/src/main/resources/templates/product/update.html
+++ b/06-lombok-jpa/src/main/resources/templates/product/update.html
@@ -44,6 +44,18 @@
                     </div>
                 </div>
 
+                <div class="mb-3">
+                    <label for="category" class="form-label">Kategoria</label>
+                    <select id="category" class="form-select" th:field="*{category.id}">
+                        <option value="">Zgjedh kategori</option>
+                        <option th:each="cat : ${categories}"
+                                th:value="${cat.id}"
+                                th:text="${cat.name}"
+                                th:selected="${cat.id == product.category.id}"
+                        ></option>
+                    </select>
+                </div>
+
                 <hr>
 
                 <div class="text-center">
