--- a/06-lombok-jpa/src/main/resources/templates/shared/_product.html
+++ b/06-lombok-jpa/src/main/resources/templates/shared/_product.html
@@ -1,10 +1,13 @@
 <div class="card" style="width: 18rem;"
-     th:fragment="productFragment(title, description, image, price, updateLink, deleteLink)">
+     th:fragment="productFragment(title, description, image, price, updateLink, deleteLink, category)">
     <img th:src="${image}" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title" th:text="${title}"></h5>
         <p class="fw-bold">Cmimi: <span th:text="${price}"></span></p>
         <p class="card-text" th:text="${description}"></p>
+        <p class="text-muted" th:if="${category != null && category != ''}">
+            Kategoria: <strong th:text="${category}"></strong>
+        </p>
         <a th:href="@{${updateLink}}" class="btn btn-outline-secondary">Modifiko</a>
         <a th:href="@{${deleteLink}}" class="btn btn-outline-danger ms-1">Fshij</a>
     </div>
