add category deletion functionality, product listing by category and add fetch types

--- a/06-lombok-jpa/src/main/resources/templates/category/index.html
+++ b/06-lombok-jpa/src/main/resources/templates/category/index.html
@@ -17,6 +17,10 @@
             </div>
 
             <div>
+                <a th:href="@{/categories/{id}/products(id=${cat.id})}"
+                   class="btn btn-outline-info">
+                    Produktet
+                </a>
                 <a th:href="@{/categories/update/{id}(id=${cat.id})}"
                    class="btn btn-outline-secondary">
                     Modifiko
