--- a/06-lombok-jpa/src/main/resources/templates/shared/nav.html
+++ b/06-lombok-jpa/src/main/resources/templates/shared/nav.html
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/categories}">Kategorite</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/tags}">Tagjet</a>
+                </li>
             </ul>
         </div>
     </div>
