--- a/06-lombok-jpa/src/main/resources/templates/shared/_product.html
+++ b/06-lombok-jpa/src/main/resources/templates/shared/_product.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;"
-     th:fragment="productFragment(title, description, image, price, updateLink, deleteLink, category)">
+     th:fragment="productFragment(title, description, image, price, updateLink, deleteLink, category, tags)">
     <img th:src="${image}" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title" th:text="${title}"></h5>
@@ -8,6 +8,13 @@
         <p class="text-muted" th:if="${category != null && category != ''}">
             Kategoria: <strong th:text="${category}"></strong>
         </p>
+        <p th:if="${tags != null && !tags.isEmpty()}">
+            <span class="badge rounded-pill text-bg-primary me-2"
+                  th:each="tag : ${tags}"
+                  th:text="${tag.name}">
+            </span>
+        </p>
+
         <a th:href="@{${updateLink}}" class="btn btn-outline-secondary">Modifiko</a>
         <a th:href="@{${deleteLink}}" class="btn btn-outline-danger ms-1">Fshij</a>
     </div>
